Implemented background images feature, sprint #1 is done.

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -841,9 +841,20 @@
               </div>
             </div>
             <div class="modal-body">
+              <h3>FIRST IMAGE</h3>
               <div class="form-group">
-                <input id="input-image-background" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
+                <input id="input-image-background" type="file" accept="image/*" placeholder="Add image or video" class="input-file input-file-1">
                 <label for="input-image-background" class="img-label">Add Background Image</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-background"><img id="input-image-background" src="#" alt="" class="show-image empty">
+              </div>
+              <h3>SECOND IMAGE</h3>
+              <div class="form-group">
+                <input id="input-image-background-2" type="file" accept="image/*" placeholder="Add image or video" class="input-file input-file-2">
+                <label for="input-image-background-2" class="img-label">Add Background Image (2 - Second)</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-background-2"><img id="input-image-background-2" src="#" alt="" class="show-image empty">
+              </div>
+              <h3>THIRD IMAGE</h3>
+              <div class="form-group">
+                <input id="input-image-background-3" type="file" accept="image/*" placeholder="Add image or video" class="input-file input-file-3">
+                <label for="input-image-background-3" class="img-label">Add Background Image (3 - Third)</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-background-3"><img id="input-image-background-3" src="#" alt="" class="show-image empty">
               </div>
               <div class="modal-inputs">
                 <form></form>
@@ -851,8 +862,8 @@
             </div>
             <div class="modal-footer">
               <button class="mdl-button mdl-js-button close-button">Close</button>
-              <button id="updateProfile" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
-              <div data-mdl-for="updateProfile" class="mdl-tooltip">This text will be changed anyway.</div>
+              <button id="updateBackgroundImages" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
+              <div data-mdl-for="updateBackgroundImages" class="mdl-tooltip">This text will be changed anyway.</div>
             </div>
           </div>
         </div>
@@ -925,12 +936,12 @@
             <p>Change</p>
           </div>
         </div>
-        <div class="item"><img src="images/background-buildings.png" alt="Building">
+        <div class="item second"><img src="images/background-buildings.png" alt="Building">
           <div class="text-on-image">
             <p>Change</p>
           </div>
         </div>
-        <div class="item"><img src="images/background-downtown.png" alt="Building">
+        <div class="item third"><img src="images/background-downtown.png" alt="Building">
           <div class="text-on-image">
             <p>Change</p>
           </div>
