--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -944,7 +944,7 @@
       <!--div class="button-next"><i class="material-icons">keyboard_arrow_right</i></div-->
       <div class="items">
         <div  class="item">
-            <img id="profile-headline" src="images/background-downtown.png" alt="Building">
+            <img style="" id="profile-headline" src="images/background-downtown.png" alt="Building">
         </div>
       </div>
     </section>
