wip: UI profile cards

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1167,11 +1167,14 @@
       </div>
     </section>
     <!-- Including {PROFILES} page content-->
+
     <section style="display: none" class="profiles-page-content">
       <div class="container">
         <p>Profiles page</p>
+        <div class="profiles-container">Profiles</div>
       </div>
     </section>
+
     <!-- jQuery 3.1.1-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- jQuery UI 1.11.2-->
@@ -1214,6 +1217,7 @@
 
 
 <script>
+/*
 // Get the modal
 var modal = document.getElementById('myModal');
 
@@ -1238,7 +1242,7 @@ window.onclick = function(event) {
     if (event.target == modal) {
         modal.style.display = "none";
     }
-}
+}*/
 </script>
 
 
