--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1283,6 +1283,32 @@ window.onclick = function(event) {
       </div>
     </div>
 
+    <div id="new-modal-thing">
+      <!-- header -->
+      <div class="new-modal-header">
+        <!-- profile info -->
+        <div class="new-modal-owner-info">
+          Owner data
+        </div>
+        <!-- other things -->
+        <div class="new-modal-others">
+          Other things
+        </div>
+      </div>
+      <!-- image -->
+      <div id="new-modal-gig-image">
+        <div id="new-modal-gig-title">
+          Title
+        </div>
+        <div id="new-modal-description">
+          Description
+        </div>
+      </div>
+      <div class="new-modal-footer">
+        Footer
+      </div>
+    </div>
+
 
   </body>
 </html>
