fix css headline aspect ratio to cover

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -937,15 +937,17 @@
       </div>
     </header>
     <!-- Including {PROFILE} PAGE content-->
-    <!-- Background image section, including a button with lock and unlock icons.-->
+    <!--  headline image HEADLINE IMAGE k:headline k:profile k:photo -->
     <section style="display: none" class="background-image" >
       <div class="button-next" style="margin: auto;">
         <i id="myBtn--" open-modal="#edit-profile-headline" class="material-icons open-modal">add_a_photo</i>&nbsp;</div>
       <!--div class="button-next"><i class="material-icons">keyboard_arrow_right</i></div-->
       <div class="items">
         <div  class="item">
-            <img style="" id="profile-headline" src="images/background-downtown.png" alt="Building"
-            class="aspecto-img">
+            <!--img style="" id="profile-headline" src="images/background-downtown.png" alt="Building"
+            class="aspecto-img"-->
+           <div id="profile-headline" class="aspecto-img"></div>
+
         </div>
       </div>
     </section>
