--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1020,29 +1020,29 @@
               <!-- Gigs TAB-->
               <div id="gigs" role="tabpanel" class="tab-pane fade in active col-xs-12">
                 <div class="gigs-container-profile">
-                  <div data-toggle="modal" data-target="#gigModal" class="gig content-block">
-                    <button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button--icon dropdown-button"><i class="material-icons">more_vert</i></button>
-                    <ul for="dropdowngiga0" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
-                      <li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>
-                      <li class="mdl-menu__item delete">Delete</li>
-                    </ul>
-                    <div class="ui fluid image">
-                      <div class="ui black ribbon label">Category</div>
-                      <div class="image-block"><img src="images/paypal.jpg"></div>
-                    </div>
-                    <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
-                      <h5>owner_nickname</h5>
-                      <h4>Entry Level</h4>
-                    </div>
-                    <p>Gig Description</p>
-                    <div class="lower-info">
-                      <div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>
-                      <h6 class="expire">expires in 5 mins</h6>
-                    </div>
-                    <div class="footer">
-                      <h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>
-                    </div>
-                  </div>
+                  <!--<div data-toggle="modal" data-target="#gigModal" class="gig content-block">-->
+                    <!--<button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button&#45;&#45;icon dropdown-button"><i class="material-icons">more_vert</i></button>-->
+                    <!--<ul for="dropdowngiga0" class="mdl-menu mdl-menu&#45;&#45;bottom-right mdl-js-menu mdl-js-ripple-effect">-->
+                      <!--<li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>-->
+                      <!--<li class="mdl-menu__item delete">Delete</li>-->
+                    <!--</ul>-->
+                    <!--<div class="ui fluid image">-->
+                      <!--<div class="ui black ribbon label">Category</div>-->
+                      <!--<div class="image-block"><img src="images/paypal.jpg"></div>-->
+                    <!--</div>-->
+                    <!--<div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">-->
+                      <!--<h5>owner_nickname</h5>-->
+                      <!--<h4>Entry Level</h4>-->
+                    <!--</div>-->
+                    <!--<p>Gig Description</p>-->
+                    <!--<div class="lower-info">-->
+                      <!--<div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>-->
+                      <!--<h6 class="expire">expires in 5 mins</h6>-->
+                    <!--</div>-->
+                    <!--<div class="footer">-->
+                      <!--<h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>-->
+                    <!--</div>-->
+                  <!--</div>-->
                 </div>
               </div>
               <!-- Portfolio TAB-->
@@ -1052,29 +1052,29 @@
               <!-- Portfolio TAB-->
               <div id="orders" role="tabpanel" class="tab-pane fade col-xs-12">
                 <div class="gigs-container-orders">
-                  <div data-toggle="modal" data-target="#gigModal" class="gig content-block">
-                    <button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button--icon dropdown-button"><i class="material-icons">more_vert</i></button>
-                    <ul for="dropdowngiga0" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
-                      <li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>
-                      <li class="mdl-menu__item delete">Delete</li>
-                    </ul>
-                    <div class="ui fluid image">
-                      <div class="ui black ribbon label">Category</div>
-                      <div class="image-block"><img src="images/paypal.jpg"></div>
-                    </div>
-                    <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
-                      <h5>owner_nickname</h5>
-                      <h4>Entry Level</h4>
-                    </div>
-                    <p>Gig Description</p>
-                    <div class="lower-info">
-                      <div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>
-                      <h6 class="expire">expires in 5 mins</h6>
-                    </div>
-                    <div class="footer">
-                      <h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>
-                    </div>
-                  </div>
+                  <!--<div data-toggle="modal" data-target="#gigModal" class="gig content-block">-->
+                    <!--<button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button&#45;&#45;icon dropdown-button"><i class="material-icons">more_vert</i></button>-->
+                    <!--<ul for="dropdowngiga0" class="mdl-menu mdl-menu&#45;&#45;bottom-right mdl-js-menu mdl-js-ripple-effect">-->
+                      <!--<li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>-->
+                      <!--<li class="mdl-menu__item delete">Delete</li>-->
+                    <!--</ul>-->
+                    <!--<div class="ui fluid image">-->
+                      <!--<div class="ui black ribbon label">Category</div>-->
+                      <!--<div class="image-block"><img src="images/paypal.jpg"></div>-->
+                    <!--</div>-->
+                    <!--<div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">-->
+                      <!--<h5>owner_nickname</h5>-->
+                      <!--<h4>Entry Level</h4>-->
+                    <!--</div>-->
+                    <!--<p>Gig Description</p>-->
+                    <!--<div class="lower-info">-->
+                      <!--<div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>-->
+                      <!--<h6 class="expire">expires in 5 mins</h6>-->
+                    <!--</div>-->
+                    <!--<div class="footer">-->
+                      <!--<h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>-->
+                    <!--</div>-->
+                  <!--</div>-->
                 </div>
               </div>
             </div>
@@ -1171,29 +1171,29 @@
 
         <div class="gigs col-md-9">
           <div class="gigs-container">
-            <div data-toggle="modal" data-target="#gigModal" class="gig content-block">
-              <button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button--icon dropdown-button"><i class="material-icons">more_vert</i></button>
-              <ul for="dropdowngiga0" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
-                <li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>
-                <li class="mdl-menu__item delete">Delete</li>
-              </ul>
-              <div class="ui fluid image">
-                <div class="ui black ribbon label">Category</div>
-                <div class="image-block"><img src="images/paypal.jpg"></div>
-              </div>
-              <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
-                <h5>owner_nickname</h5>
-                <h4>Entry Level</h4>
-              </div>
-              <p>Gig Description</p>
-              <div class="lower-info">
-                <div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>
-                <h6 class="expire">expires in 5 mins</h6>
-              </div>
-              <div class="footer">
-                <h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>
-              </div>
-            </div>
+            <!--<div data-toggle="modal" data-target="#gigModal" class="gig content-block">-->
+              <!--<button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button&#45;&#45;icon dropdown-button"><i class="material-icons">more_vert</i></button>-->
+              <!--<ul for="dropdowngiga0" class="mdl-menu mdl-menu&#45;&#45;bottom-right mdl-js-menu mdl-js-ripple-effect">-->
+                <!--<li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>-->
+                <!--<li class="mdl-menu__item delete">Delete</li>-->
+              <!--</ul>-->
+              <!--<div class="ui fluid image">-->
+                <!--<div class="ui black ribbon label">Category</div>-->
+                <!--<div class="image-block"><img src="images/paypal.jpg"></div>-->
+              <!--</div>-->
+              <!--<div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">-->
+                <!--<h5>owner_nickname</h5>-->
+                <!--<h4>Entry Level</h4>-->
+              <!--</div>-->
+              <!--<p>Gig Description</p>-->
+              <!--<div class="lower-info">-->
+                <!--<div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>-->
+                <!--<h6 class="expire">expires in 5 mins</h6>-->
+              <!--</div>-->
+              <!--<div class="footer">-->
+                <!--<h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>-->
+              <!--</div>-->
+            <!--</div>-->
           </div>
         </div>
       </div>
@@ -1373,29 +1373,29 @@
               <!-- Completed Orders TAB-->
               <div id="completed-other" role="tabpanel" class="tab-pane fade col-xs-12">
                 <div class="gigs-container-orders">
-                  <div data-toggle="modal" data-target="#gigModal" class="gig content-block">
-                    <button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button--icon dropdown-button"><i class="material-icons">more_vert</i></button>
-                    <ul for="dropdowngiga0" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
-                      <li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>
-                      <li class="mdl-menu__item delete">Delete</li>
-                    </ul>
-                    <div class="ui fluid image">
-                      <div class="ui black ribbon label">Category</div>
-                      <div class="image-block"><img src="images/paypal.jpg"></div>
-                    </div>
-                    <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
-                      <h5>owner_nickname</h5>
-                      <h4>Entry Level</h4>
-                    </div>
-                    <p>Gig Description</p>
-                    <div class="lower-info">
-                      <div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>
-                      <h6 class="expire">expires in 5 mins</h6>
-                    </div>
-                    <div class="footer">
-                      <h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>
-                    </div>
-                  </div>
+                  <!--<div data-toggle="modal" data-target="#gigModal" class="gig content-block">-->
+                    <!--<button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button&#45;&#45;icon dropdown-button"><i class="material-icons">more_vert</i></button>-->
+                    <!--<ul for="dropdowngiga0" class="mdl-menu mdl-menu&#45;&#45;bottom-right mdl-js-menu mdl-js-ripple-effect">-->
+                      <!--<li open-modal="#edit-gig" class="mdl-menu__item open-modal">Edit</li>-->
+                      <!--<li class="mdl-menu__item delete">Delete</li>-->
+                    <!--</ul>-->
+                    <!--<div class="ui fluid image">-->
+                      <!--<div class="ui black ribbon label">Category</div>-->
+                      <!--<div class="image-block"><img src="images/paypal.jpg"></div>-->
+                    <!--</div>-->
+                    <!--<div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">-->
+                      <!--<h5>owner_nickname</h5>-->
+                      <!--<h4>Entry Level</h4>-->
+                    <!--</div>-->
+                    <!--<p>Gig Description</p>-->
+                    <!--<div class="lower-info">-->
+                      <!--<div class="reputation"><i class="material-icons">polymer</i><span>5k+</span></div>-->
+                      <!--<h6 class="expire">expires in 5 mins</h6>-->
+                    <!--</div>-->
+                    <!--<div class="footer">-->
+                      <!--<h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>-->
+                    <!--</div>-->
+                  <!--</div>-->
                 </div>
               </div>
             </div>
